Removed unnecessary libraries

--- a/ens.ipynb
+++ b/ens.ipynb
@@ -23,11 +23,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import json\n",
-    "import gzip\n",
-    "import pandas as pd\n",
-    "pd.set_option('display.precision', 18)\n",
-    "pd.set_option('max_colwidth', None)"
+    "import json"
    ]
   },
   {
@@ -96,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The most recent block number in the node's chain is 19234234\n"
+      "The most recent block number in the node's chain is 19234250\n"
      ]
     }
    ],
